--- a/code/VRStrike/UI/SpawnMenu/SpawnMenuPanel.scss
+++ b/code/VRStrike/UI/SpawnMenu/SpawnMenuPanel.scss
@@ -2,9 +2,11 @@
 SpawnMenuPanel {
     background-color: rgba( black, 0.5 );
     padding: 15px;
+    pointer-events: all;
 
 
     button {
+        pointer-events: all;
         background-image: linear-gradient( to top, rgba( #0094ff, 1 ), rgba( #005b9d, 1 ) );
         width: 100%;
         height: 80px;
