--- a/code/VRStrike/UI/SpawnMenu/SpawnMenuPanel.scss
+++ b/code/VRStrike/UI/SpawnMenu/SpawnMenuPanel.scss
@@ -4,16 +4,30 @@ SpawnMenuPanel {
     padding: 15px;
     pointer-events: all;
 
+    flex-direction: column;
+
+    transition: all 0.25s ease;
+
+    opacity: 0;
+
+    &.visible {
+        opacity: 1;
+    }
+
 
     button {
-        pointer-events: all;
         background-image: linear-gradient( to top, rgba( #0094ff, 1 ), rgba( #005b9d, 1 ) );
         width: 100%;
         height: 80px;
         align-content: center;
         text-align: center;
+        margin-bottom: 15px;
 
-        &:hover, &:active {
+        &:hover {
+            background-image: linear-gradient( to top, rgba( #00ffff, 1 ), rgba( #005b9d, 1 ) );
+        }
+
+        &:active {
             background-image: linear-gradient( to top, rgba( white, 1 ), rgba( #005b9d, 1 ) );
         }
 
