--- a/code/VRStrike/UI/SpawnMenu/SpawnMenuPanel.scss
+++ b/code/VRStrike/UI/SpawnMenu/SpawnMenuPanel.scss
@@ -1,13 +1,10 @@
 
 SpawnMenuPanel {
-    background-color: rgba( black, 0.5 );
+    border-radius: 16px;
     padding: 15px;
     pointer-events: all;
-
     flex-direction: column;
-
     transition: all 0.25s ease;
-
     opacity: 0;
 
     &.visible {
@@ -16,6 +13,7 @@ SpawnMenuPanel {
 
 
     button {
+        border-radius: 16px;
         background-image: linear-gradient( to top, rgba( #0094ff, 1 ), rgba( #005b9d, 1 ) );
         width: 100%;
         height: 80px;
