--- a/code/VRStrike/UI/RadarPanel/RadarPanel.scss
+++ b/code/VRStrike/UI/RadarPanel/RadarPanel.scss
@@ -19,18 +19,22 @@ RadarPanel {
         width: 100%;
         height: 100%;
         border: 7px solid rgba( lighten( cyan, 70% ), 0.2 );
+        align-content: center;
+        align-items: center;
+        justify-content: center;
+
+        .pulse {
+            border-radius: 512px;
+            left: 0%;
+            top: 0%;
+            width: 50%;
+            height: 50%;
+            transform-origin: 50% 50%;
+            border: 7px solid rgba( lighten( cyan, 70% ), 0.2 );
+        }
     }
 
-    .pulse {
-        position: absolute;
-        border-radius: 512px;
-        left: 0%;
-        top: 0%;
-        width: 50%;
-        height: 50%;
-        transform-origin: 50% 50%;
-        border: 7px solid rgba( lighten( cyan, 70% ), 0.2 );
-    }
+
 
     .dotanchor {
         width: 100%;
@@ -39,12 +43,12 @@ RadarPanel {
 
 
         minimapdot {
-            background-color: white;
-            box-shadow: 0 0px 15px rgba(white,0.1);
+            background-color: rgba( lighten( cyan, 70% ), 0.7 );
+            box-shadow: 0 0px 15px rgba(black,0.5);
             position: absolute;
             border-radius: 50%;
-            height: 12px;
-            width: 12px;
+            height: 16px;
+            width: 16px;
             transition: opacity 0.2s ease;
             opacity: 1;
 
