--- a/code/VRStrike/UI/RadarPanel/RadarPanel.scss
+++ b/code/VRStrike/UI/RadarPanel/RadarPanel.scss
@@ -6,6 +6,8 @@ RadarPanel {
     opacity: 0;
     background-image: radial-gradient( rgba( black, 0 ), rgba( black, 0.5 ) 50% );
 
+    backdrop-filter: blur( 10px );
+
     &.visible {
         opacity: 1;
     }
